# filmfiche

./: CLAUDE.md  LICENSE  PLAN.md  README.md  main.py  mockup.ui  pyproject.toml
.claude/: settings.local.json
app/core/: half_frame.py  metadata.py  mover.py  scanner.py  tagger.py  template.py
app/gui/: half_frame_dialog.py  main_window.py  move_tab.py  scan_tab.py  tagger_dialog.py
app/gui/widgets/: dir_picker.py  drop_area.py  file_table.py  filter_panel.py  frame_table.py  template_editor.py
app/models/: film_frame.py  move_result.py  photo_file.py  scan_result.py  split_result.py
tests/: conftest.py  test_file_table.py  test_half_frame.py  test_half_frame_gui.py  test_main_window.py  test_metadata.py  test_mover.py  test_scanner.py  test_tabs.py  test_tagger.py  test_tagger_gui.py  test_template.py  test_widgets.py
