[project]
name = "filmfiche"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "exifread>=3.5.1",
    "hachoir>=3.3.0",
    "numpy>=2.1",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "pillow-heif>=1.3.0",
    "pyside6>=6.11.0",
    "tifffile>=2026.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
